readme changes and int cast

--- a/program.ipynb
+++ b/program.ipynb
@@ -2,17 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What is your name? Gavin\n",
+      "How old are you? 50\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gavin , you can vote! Go to your nearest polling location on November 7!\n"
+     ]
+    }
+   ],
    "source": [
     "nameInput= input(\"What is your name?\")\n",
-    "ageInput= input(\"How old are you?\")\n",
+    "ageInput= int(input(\"How old are you?\"))\n",
     "if ageInput < 18:\n",
     "    print (\"Sorry\", nameInput, \"you cannot vote.\")\n",
     "else:\n",
     "    print (nameInput, \", you can vote! Go to your nearest polling location on November 7!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
